# blackjacksim

./: BSTableCell.h  CMakeLists.txt  Condition.cpp  Condition.h  ConditionObjType.h  ConditionObject.h  Game.cpp  Game.h  Hand.cpp  List.h  Move.h  Player.cpp  Player.h  Rules.h  Status.h  bsgui2.sln  main.cpp
bsgui2/: BSTable.cpp  BSTable.h  BSTableCell.cpp  BSTableCell.h  CMakeLists.txt  Card.h  CmpType.h  Condition.cpp  Condition.h  ConditionObject.cpp  ConditionObject.h  Game.cpp  Game.h  Globals.h  Hand.cpp  Hand.h  HandValue.h  InputTable.h  List.h  Player.h  Rank.h  Rules.h  Suit.h  bsgui2.vcxproj  bsgui2.vcxproj.filters  glad.c  imgui.ini  main.cpp
bsgui2/Libraries/include/glad/: glad.h
bsgui2/Libraries/lib/: glfw3.lib
